--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "eslint-plugin-vue": "7.17.0",
     "esno": "0.9.1",
     "fs-extra": "10.0.0",
+    "http-proxy-middleware": "^2.0.6",
     "inquirer": "8.1.2",
     "less": "4.1.1",
     "postcss": "8.3.6",
