--- a/package.json
+++ b/package.json
@@ -104,7 +104,7 @@
     "rollup": "2.56.2"
   },
   "engines": {
-    "node": "12 || >=14"
+    "node": ">= 16"
   },
   "browserslist": [
     "> 1%",
