--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,6 +45,7 @@
     "build/**/*.ts",
     "build/**/*.d.ts",
     "vite.config.ts",
+    "api/**/*.ts"
   ],
   "exclude": ["node_modules", "dist", "**/*.js"]
 }
