--- a/.env
+++ b/.env
@@ -4,7 +4,7 @@ VITE_PORT = 3100
 # 网站标题
 VITE_GLOB_APP_TITLE = Dolphin Admin
 
-# 简称，用于配置文件名字 不要出现空格、数字开头等特殊字符
+# 简称，用于配置文件名字-不要出现空格、数字开头等特殊字符
 VITE_GLOB_APP_SHORT_NAME = dolphin_admin
 
 # client
@@ -13,5 +13,5 @@ VITE_GLOB_CLIENT_ID = dolphin
 # client-secret
 VITE_GLOB_CLIENT_SECRET = dolphin
 
-# 网关ase密码解密密钥,保持跟后端密钥一致,必须要有否则登录会失败的
+# 网关ase密码解密密钥，保持跟后端密钥一致，必须要有否则登录会失败的
 VITE_GLOB_GATEWAY_ASE_ENCODE_SECRET = dolphin-platform
