--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-# 资源公共路径,需要以 /开头和结尾
+# 资源公共路径，需要以 /开头和结尾
 VITE_PUBLIC_PATH = /
 
 # 本地开发代理，可以解决跨域及多地址代理
@@ -11,7 +11,7 @@ VITE_DROP_CONSOLE = false
 
 # 打包是否输出gz｜br文件
 # 可选: gzip | brotli | none
-# 也可以有多个, 例如 ‘gzip’|'brotli',这样会同时生成 .gz和.b r文件
+# 也可以有多个，例如gzip|brotli,这样会同时生成.gz和.br文件
 VITE_BUILD_COMPRESS = 'none'
 
 # 使用compress时是否删除源文件，默认false
@@ -21,7 +21,7 @@ VITE_BUILD_COMPRESS_DELETE_ORIGIN_FILE = false
 # 如果没有跨域问题，直接在这里配置即可
 VITE_GLOB_API_URL=/prod-api
 
-# 文件上传地址，可选
+# 文件上传地址可选
 # 可以通过nginx转发或者直接写实际地址
 VITE_GLOB_UPLOAD_URL=/prod-upload
 
@@ -34,5 +34,5 @@ VITE_USE_IMAGEMIN= true
 # 打包是否开启pwa(渐进式web应用程序)功能
 VITE_USE_PWA = false
 
-# 是否兼容旧版浏览器。开启后打包时间会慢一倍左右。会多打出旧浏览器兼容包,且会根据浏览器兼容性自动使用相应的版本
+# 是否兼容旧版浏览器，开启后打包时间会慢一倍左右，会多打出旧浏览器兼容包，且会根据浏览器兼容性自动使用相应的版本
 VITE_LEGACY = false
